src/objects/PSA_Integration_Log__c.object
<CustomObject>
    <description>Record of specific integration executions</description>
    <fields>
        <fullName>PSA_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to related assignment</description>
        <inlineHelpText>Look up to related assignment</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>PSA Integration Logs</relationshipLabel>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Integration Logging lookup</description>
        <inlineHelpText>Used for Integration Logging lookup</inlineHelpText>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>PSA Integration Logs</relationshipLabel>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Debug_Message__c</fullName>
        <label>Debug Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Integration Logging lookup</description>
        <inlineHelpText>Used for Integration Logging lookup</inlineHelpText>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipLabel>PSA Integration Logs</relationshipLabel>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_GW_Integration_Id__c</fullName>
        <description>Record identifier from a source system, not a PSA object id</description>
        <inlineHelpText>Record identifier from a source system, not a PSA object id</inlineHelpText>
        <label>GW Integration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Integration_Type__c</fullName>
        <label>Integration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Resource-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource-Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource-LOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource-Transfer Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource-Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing-Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense-Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Off Request-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Off Request-Correction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Log_Category__c</fullName>
        <label>Log Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Log_Type__c</fullName>
        <label>Log Type</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Reference_Id__c</fullName>
        <description>The id of the related staging record</description>
        <inlineHelpText>The id of the related staging record</inlineHelpText>
        <label>Reference Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Integration Logging lookup</description>
        <inlineHelpText>Used for Integration Logging lookup</inlineHelpText>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PSA Integration Logs</relationshipLabel>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Schedule_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule exception for the time off request</description>
        <inlineHelpText>Schedule exception for the time off request</inlineHelpText>
        <label>Schedule Exception</label>
        <referenceTo>pse__Schedule_Exception__c</referenceTo>
        <relationshipLabel>PSA Integration Logs</relationshipLabel>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>PSA Integration Logs</relationshipLabel>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PSA_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PSA Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Reference_Id__c</columns>
        <columns>PSA_GW_Integration_Id__c</columns>
        <columns>PSA_Integration_Type__c</columns>
        <columns>PSA_Log_Type__c</columns>
        <columns>PSA_Log_Category__c</columns>
        <columns>PSA_Resource__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Debug_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>PSA_Log_Type__c</columns>
        <columns>PSA_Integration_Type__c</columns>
        <columns>PSA_Reference_Id__c</columns>
        <columns>PSA_Log_Category__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Debug_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Log_Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>All Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Successes</fullName>
        <columns>NAME</columns>
        <columns>PSA_Log_Type__c</columns>
        <columns>PSA_Integration_Type__c</columns>
        <columns>PSA_Reference_Id__c</columns>
        <columns>PSA_Log_Category__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Debug_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Log_Type__c</field>
            <operation>equals</operation>
            <value>Information</value>
        </filters>
        <label>All Successes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Warnings</fullName>
        <columns>NAME</columns>
        <columns>PSA_Log_Type__c</columns>
        <columns>PSA_Integration_Type__c</columns>
        <columns>PSA_Reference_Id__c</columns>
        <columns>PSA_Log_Category__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Debug_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Log_Type__c</field>
            <operation>equals</operation>
            <value>Warning</value>
        </filters>
        <label>All Warnings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Billing_Logs</fullName>
        <columns>NAME</columns>
        <columns>PSA_Billing_Event__c</columns>
        <columns>PSA_Debug_Message__c</columns>
        <columns>PSA_GW_Integration_Id__c</columns>
        <columns>PSA_Integration_Type__c</columns>
        <columns>PSA_Log_Category__c</columns>
        <columns>PSA_Log_Type__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Reference_Id__c</columns>
        <columns>PSA_Resource__c</columns>
        <columns>PSA_Schedule__c</columns>
        <columns>PSA_Schedule_Exception__c</columns>
        <columns>PSA_User__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Integration_Type__c</field>
            <operation>equals</operation>
            <value>Billing-Update</value>
        </filters>
        <label>Billing Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Billing_Id</fullName>
        <columns>NAME</columns>
        <columns>PSA_Log_Type__c</columns>
        <columns>PSA_Integration_Type__c</columns>
        <columns>PSA_Reference_Id__c</columns>
        <columns>PSA_Log_Category__c</columns>
        <columns>PSA_Message__c</columns>
        <columns>PSA_Debug_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Billing_Event__c</field>
            <operation>equals</operation>
            <value>a1f34000000grB7</value>
        </filters>
        <label>Specific Billing Id</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ILOG-{000000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>